--- a/DesctopHITE/AppDateFolder/StyleFolder/MenuDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/MenuDictionary.xaml
@@ -1,10 +1,12 @@
 ﻿<ResourceDictionary 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style x:Key="MenuButton" TargetType="Menu">
+    <Style x:Key="Menu" TargetType="Menu">
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="Foreground" Value="#a2a2a2"/>
         <Setter Property="BorderBrush" Value="Transparent"/>
+        <Setter Property="HorizontalContentAlignment" Value="Center"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="Height" Value="30"/>
         <Setter Property="Width" Value="30"/>
         <Setter Property="FontSize" Value="18"/>
@@ -13,7 +15,7 @@
         <Setter Property="FontFamily" Value="\ContentFolder\FontFolder\#Material-Design-Iconic-Font"/>
     </Style>
 
-    <Style x:Key="ParentMenuItem" TargetType="MenuItem" >
+    <Style x:Key="ParentMenuItem" TargetType="MenuItem">
         <Setter Property="Cursor" Value="Hand"/>
         <Setter Property="Template">
             <Setter.Value>
@@ -45,7 +47,59 @@
                         </Grid>
                     </Border>
                     <ControlTemplate.Triggers>
-                       
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="Border" Property="Background" Value="#303030"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="MenuButton" TargetType="MenuItem">
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="Foreground" Value="#a2a2a2"/>
+        <Setter Property="BorderBrush" Value="Transparent"/>
+        <Setter Property="HorizontalContentAlignment" Value="Center"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="Height" Value="30"/>
+        <Setter Property="Width" Value="30"/>
+        <Setter Property="FontSize" Value="18"/>
+        <Setter Property="Cursor" Value="Hand"/>
+        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="FontFamily" Value="\ContentFolder\FontFolder\#Material-Design-Iconic-Font"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type MenuItem}">
+                    <Border x:Name="Border">
+                        <Grid>
+                            <ContentPresenter
+                                VerticalAlignment="Center"
+                                HorizontalAlignment="Center"
+                                ContentSource="Header" 
+                                RecognizesAccessKey="True"/>
+                            <Popup 
+                                x:Name="Popup"
+                                Placement="Bottom" 
+                                IsOpen="{TemplateBinding IsSubmenuOpen}" 
+                                AllowsTransparency="True"
+                                Focusable="False" 
+                                PopupAnimation="Scroll">
+                                <Border 
+                                    x:Name="SubmenuBorder"
+                                    SnapsToDevicePixels="True"
+                                    BorderThickness="2" 
+                                    Background="#202020"
+                                    BorderBrush="#2a2a2a">
+                                    <StackPanel IsItemsHost="True" KeyboardNavigation.DirectionalNavigation="Cycle"/>
+                                </Border>
+                            </Popup>
+                        </Grid>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="Border" Property="Background" Value="#303030"/>
+                        </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
