--- a/DesctopHITE/PerformanceFolder/PageFolder/MenuPageFolder/NewMenuPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/MenuPageFolder/NewMenuPage.xaml
@@ -15,7 +15,7 @@
                 VerticalAlignment="Center">
                 <StackPanel
                     HorizontalAlignment="Center"
-                    Margin="3.5" 
+                    Margin="0" 
                     Orientation="Horizontal">
                     <Border 
                         Height="450"
@@ -119,20 +119,8 @@
                                         </StackPanel>
                                         <StackPanel Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
                                             <TextBlock
-                                                Style="{DynamicResource TextBlockDominatesTextBoxTextBlock}">
-                                                <StackPanel Orientation="Horizontal">
-                                                    <TextBlock
-                                                        Margin="0 0 3.5 0"
-                                                        Text="Стоимость"/>
-                                                    <TextBlock
-                                                        VerticalAlignment="Top"
-                                                        Style="{DynamicResource OtherStyleTextBlock}"
-                                                        Margin="3.5 0 0 0"
-                                                        FontSize="10"
-                                                        Text="указывается через запятую [ххх,хх]" 
-                                                        FontStyle="Italic"/>
-                                                </StackPanel>
-                                            </TextBlock>
+                                                Text="Стоимость"
+                                                Style="{DynamicResource TextBlockDominatesTextBoxTextBlock}"/>
                                             <Grid>
                                                 <Border Style="{DynamicResource OtherShadowBorder}">
                                                     <Border.Effect>
@@ -272,15 +260,15 @@
                 </StackPanel>
                 <StackPanel 
                     HorizontalAlignment="Center" 
-                    Margin="3.5" 
+                    Margin="0 3.5 0 3.5" 
                     Orientation="Horizontal">
                     <Border
                         Height="auto"
                         MinHeight="0"
-                        MaxHeight="380"
-                        Margin="3.5"
+                        MaxHeight="400"
+                        Margin="0 0 3.5 0"
                         Visibility="Visible" 
-                        Width="700" 
+                        Width="780" 
                         Style="{DynamicResource BorderInformation}">
                         <Grid>
                             <Border Style="{DynamicResource NeonBorder}">
@@ -330,7 +318,7 @@
                         Height="auto"
                         MinHeight="0"
                         MaxHeight="300"
-                        Margin="3.5"
+                        Margin="3.5 0 0 0"
                         Visibility="Visible" 
                         VerticalAlignment="Top"
                         Width="450" 
